--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque.cshtml
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,7 +68,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
