--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco.cshtml
@@ -63,8 +63,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A" && Convert.ToString(DataBinder.Eval(tc.DataItem, "IdEstado_Concil_Cat")) != "CONCILIADO")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdConciliacion = DataBinder.Eval(tc.DataItem, "IdConciliacion")}) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdConciliacion = DataBinder.Eval(tc.DataItem, "IdConciliacion")},
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdConciliacion = DataBinder.Eval(tc.DataItem, "IdConciliacion")}) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdConciliacion = DataBinder.Eval(tc.DataItem, "IdConciliacion")},
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -72,7 +72,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
