--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Nuevo.cshtml
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm("Nuevo", "Caja", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-
+    @Html.HiddenFor(q => q.IdEmpresa)
 
     <div class="row">
         <div class="col-md-12">
@@ -61,34 +61,34 @@
             </div>
         </div>
     </div>
- 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="IdCtaCble">Cuenta contable</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble, settings =>
-               {
-                   settings.Name = "IdCtaCble";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdCtaCble";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "pc_Cuenta";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_cuentas).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble">Cuenta contable</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble, settings =>
+       {
+           settings.Name = "IdCtaCble";
+           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+           settings.Properties.DisplayFormatString = "[{0}] - {1}";
+           settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+           settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+           settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
+           //Campo ID
+           settings.Properties.ValueField = "IdCtaCble";
+           settings.Properties.ValueType = typeof(string);
+           settings.Properties.TextField = "pc_Cuenta";
+           //Boton para seleccionar ningun registro
+           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+           settings.Properties.NullText = "== Seleccione ==";
+           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+       }).BindList(ViewBag.lst_cuentas).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -101,12 +101,12 @@
         </div>
     </div>
 
-            <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Guardar</button>
-                <a class="btn btn-default" href="@Url.Action("Index", "Caja", new { Area ="Caja" }, null)">Cancelar</a>
-            </div>
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index", "Caja", new { Area ="Caja" }, null)">Cancelar</a>
+    </div>
 
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
