--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_padre.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_padre.cshtml
@@ -23,7 +23,7 @@
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){ValidarTabImagen();get_info_padre();}";
     })
     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda)
-    .Bind(Model.IdProducto);
+    .Bind(Model.IdProducto_padre);
 
 }
 @comboBox.GetHtml()
