--- a/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/Nuevo.cshtml
@@ -11,6 +11,8 @@
 
 @using (Html.BeginForm("Nuevo", "TipoMovimientoCaja", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -67,11 +69,11 @@
         </div>
     </div>
 
-            <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Guardar</button>
-                <a class="btn btn-default" href="@Url.Action("Index","TipoMovimientoCaja",new { Area = "Caja" },null)">Cancelar</a>
-            </div>
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index","TipoMovimientoCaja",new { Area = "Caja" },null)">Cancelar</a>
+    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
