--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Nuevo.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("Nuevo", "Proveedor", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
 
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdPersona, new { @id = "IdPersona" })
     <div class="row">
         <div class="col-md-12">
@@ -465,7 +465,10 @@
             }
 
         var datos = {
-            pe_cedulaRuc: cedula
+            pe_cedulaRuc: cedula,
+            IdEmpresa: $("#IdEmpresa").val()
+
+
         }
         $.ajax({
             type: 'POST',
@@ -526,7 +529,9 @@
 
         if (clase != null) {
             var datos = {
-                IdClaseProveedor: clase
+                IdClaseProveedor: clase,
+                IdEmpresa: $("#IdEmpresa").val()
+
             }
             $.ajax({
                 type: 'POST',
