--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Nuevo.cshtml
@@ -18,8 +18,8 @@
 
 @using (Html.BeginForm("Nuevo", "TipoOrdenPago", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    
-    
+    @Html.HiddenFor(q => q.IdEmpresa)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
