--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/_GridViewPartial_tipo_orden_pago.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/_GridViewPartial_tipo_orden_pago.cshtml
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTipo_op = DataBinder.Eval(tc.DataItem, "IdTipo_op"), IdTipoSRI = ViewBag.IdTipoSRI }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTipo_op = DataBinder.Eval(tc.DataItem, "IdTipo_op"), IdTipoSRI = ViewBag.IdTipoSRI },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipo_op = DataBinder.Eval(tc.DataItem, "IdTipo_op"), IdTipoSRI = ViewBag.IdTipoSRI }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipo_op = DataBinder.Eval(tc.DataItem, "IdTipo_op"), IdTipoSRI = ViewBag.IdTipoSRI },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdTipoSRI = ViewBag.IdTipoSRI }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdTipoSRI = ViewBag.IdTipoSRI, IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
