--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_nota_credito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_nota_credito.cshtml
@@ -62,8 +62,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTipoCbte_Nota = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Nota"), IdCbteCble_Nota = DataBinder.Eval(tc.DataItem, "IdCbteCble_Nota") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTipoCbte_Nota = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Nota"), IdCbteCble_Nota = DataBinder.Eval(tc.DataItem, "IdCbteCble_Nota") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Nota = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Nota"), IdCbteCble_Nota = DataBinder.Eval(tc.DataItem, "IdCbteCble_Nota") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Nota = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Nota"), IdCbteCble_Nota = DataBinder.Eval(tc.DataItem, "IdCbteCble_Nota") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -71,7 +71,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdTipoSRI = ViewBag.IdTipoSRI }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdTipoSRI = ViewBag.IdTipoSRI, IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
